--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,24 +6,29 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: read
   pages: write
   id-token: write
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+        with:
+          fetch-depth: 0
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-
+          cache: 'npm'
+      
       - name: Generate Firebase Config
         run: |
+          mkdir -p scripts
           node scripts/generate-config.js
         env:
           FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
@@ -33,21 +38,32 @@ jobs:
           FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
           FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
-
+      
+      - name: Verify Firebase Config
+        run: |
+          if [ ! -f firebase-config.js ]; then
+            echo "❌ firebase-config.js не создан!"
+            exit 1
+          fi
+          echo "✅ firebase-config.js создан успешно!"
+          head -5 firebase-config.js
+      
       - name: Setup Pages
         uses: actions/configure-pages@v3
-
-      - name: Build (Copy files)
+      
+      - name: Build
         run: |
           mkdir -p _site
-          cp -r * _site/ 2>/dev/null || true
-          rm -rf _site/.github _site/scripts _site/firebase-config.js.template
-
+          cp -r !(node_modules|.github|_site) _site/ 2>/dev/null || true
+          rm -rf _site/scripts _site/.gitignore _site/firebase-config.js.template
+          echo "✅ Сборка завершена"
+          ls -la _site/ | head -20
+      
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: '_site'
-
+      
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
