--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,20 @@
-# 🔐 НИКОГДА НЕ КОММИТИТЬ КОНФИГИ С КЛЮЧАМИ!
-
-# Firebase конфигурация (генерируется при деплое)
+# Firebase config
 firebase-config.js
-!firebase-config.js.template
+build/
+_site/
 
-# Node modules
+# Node
 node_modules/
-package-lock.json
-yarn.lock
+npm-debug.log*
 
 # IDE
 .vscode/
 .idea/
-*.swp
-*.swo
-*~
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Логи
+# Logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-
-# Временные файлы
-.temp/
-.cache/
-dist/
-build/
-_site/
+logs/
